# ccbd-rust

./: .gitignore  .lane-question  A4-FIXC-AUDIT-BRIEF.md  CHANGELOG.md  CLAUDE.md  COMPLETION-REPORT.md  Cargo.toml  D1-RED-CONTRACT-HANDOFF.md  ISSUE-13-DESIGN-BOUNDARY.md  ISSUE-13-DESIGN-CHALLENGE.md  ISSUE-13-RESEARCH.md  README.md  WORKORDER-FIXC-DELETE-PARK-INFERENCE-BRIEF.md  WORKORDER-FIXD-HOOK-PRIMARY-SIGNAL-BRIEF.md  ah.toml  ccb.toml
.ah/rules/: a1.md  a3.md  a4.md  c1.md  c2.md  d1.md  g1-m1.md  g1.md  g2-m1.md  g2.md  master.md  o1.md  r1.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/: A3-ADVERSARIAL-REVIEW-BRIEF.md
assets/builtin/: master_kernel.md  master_rules.md  worker_kernel.md  worker_rules.md
assets/hooks/: evidence-hook.sh
docs/: DESIGN.md  ah-dual-deploy.md  ah-full-e2e-pr1-report.md  ah-full-e2e-pr2-report.md  ah-full-e2e-pr3-report.md  ah-pr6-recovery-resume-report.md  ah-pr7-oom-resume-report.md  ccb-rs-dual-deploy.md  core-fixes-e2e-checklist.md  dispatch-design-lessons.md  keeper-spawn-loop-requirement.md  mvp13-e2e-checklist.md  plugin-bundles.md  prompt-handler-phase1-acceptance.md  rubrics.md
docs/competitive/: cmux-vibeyard-borrowable-for-ah.md
docs/reports/: pr-dogfood-final.md  (+5 more)
examples/: ah.toml  ccb.toml
logs/: operator-observation-log.md
research/: DESIGN-ROUND-A3-DEBATE-BRIEF.md  MODULE-STATUS-LEDGER.md  OPERATOR-HANDOFF-2026-07-11.md  REQUIREMENT-LEDGER.md  SOP-STANDARD.md  USER-GOALS-AND-PRINCIPLES.md  a1-antigravity-hook-research.md  a1-claude-code-doc-fetch.md  a1-codex-doc-fetch.md  a1-evidence-pack-collection.md  a1-evidence-pack-v2-补料.md  a1-fix-deepv2-citations.md  a1-gemini-cli-doc-fetch.md  a1-prompt-round5.md  a1-reference-materials.md  a2-gemini-deep-analysis-round6.md  a2-gemini-doc-fetch.md  a2-pure-analysis.md  a3-adversarial-review-of-c-d-specs-2026-07-10.md  ab-experiment-gateway-2026-07-11.md  ab-experiment-r1-outbox-protocol-2026-07-11.md  agy-arch-convergence-brief-2026-07-09.md  agy-arch-review-brief-2026-07-09.md  agy-perception-divergence-brief-2026-07-09.md  ah-commands-fix-round.md  ah-commands-impl-brief.md  ah-commands-skill-a3-design-brief.md  ah-commands-skill-design.md  ah-commands-skill-trigger-design.md  ah-dogfood-recovery-ops-incidents.md  ah-internals-a3-design-brief.md  ah-internals-anchor-brief.md  ah-internals-anchors.md  ah-internals-design.md  ah-internals-skill-design.md  antigravity-hooks-research.md  arch-convergence-agy-verdicts-2026-07-09.md  architecture-assessment-antigravity-2026-07-09.md  architecture-assessment-converged-2026-07-09.md  architecture-assessment-operator-2026-07-09.md  (+61 more)
rules/: AGENTS.md  CLAUDE.md  GEMINI.md
scripts/: ac_e2e.sh  ac_mvp8_real_codex.sh  ac_mvp9_e2e.sh  ci_check_raw_updates.py  cleanup_orphan_tmux.sh  core_fixes_full_e2e.sh  install_ah.sh  install_ccb_rs.sh  mvp13-e2e-no-sandbox.sh  mvp13-e2e-sandbox-probe.sh  mvp13-e2e-sandbox.sh  r1_e2e.sh  r3_e2e.sh  r4_e2e.sh  verify_agent_sandbox_isolation.sh
src/: claude_gateway.rs  credentials.rs  env.rs  error.rs  lib.rs  main.rs  master_cutover.rs  master_revival.rs  process_identity.rs  runtime_events.rs  state_layout.rs  systemd_unit.rs
tests/: ack_fallback_lifecycle.rs  ah_config_drift.rs  ah_dogfooding.rs  ah_full_e2e_drift.rs  ah_full_e2e_main.rs  ah_full_e2e_realign_extra.rs  antigravity_completion_terminality.rs  builtin_skills.rs  claude_gateway_acceptance.rs  cred_layer1.rs  dev_scenario_template.rs  dispatch_atomicity.rs  e2e_kill_path_ownership_a4.rs  e2e_state_contract_pr1_a4.rs  gateway_graft_acceptance.rs  issue13_respawn_storm.rs  modb_b1_identity.rs  modb_b3_teardown.rs  mvp10_acceptance.rs  mvp11_acceptance.rs  mvp11_real_claude.rs  mvp11_real_codex.rs  mvp11_real_gemini.rs  mvp12_grid_layout.rs  mvp12_home_layout.rs  mvp12_init_probe.rs  mvp12_r2_dispatcher_lifecycle.rs  mvp2_acceptance.rs  mvp3_acceptance.rs  mvp4_acceptance.rs  mvp6_acceptance.rs  mvp7_acceptance.rs  mvp7_real_codex.rs  mvp7_real_gemini.rs  mvp8_acceptance.rs  mvp8_real_codex.rs  mvp9_acceptance.rs  mvp9_real_codex_claude.rs  orphan_reap.rs  plan_b_gateway_acceptance.rs  (+29 more)
(+615 files in other folders)
