[package]
name = "ccbd"
version = "0.1.0"
edition = "2024"
authors = ["sevenx"]
description = "L2 Scheduling Daemon for CCB"

[dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "sync", "signal", "time"] }
# 序列化与 JSON-RPC 基础
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SQLite 持久化 (必须 bundled 保证无外部依赖)
rusqlite = { version = "0.32", features = ["bundled"] }
# 强类型错误传播
thiserror = "1.0"
# 日志观测体系
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 路径规范解算
directories = "5.0"
# PTY 分配层 (A-3 决议)
portable-pty = "0.8.1"
# session_id 生成 (用于 D §3.2 session.create)
uuid = { version = "1", features = ["v4"] }
# 系统级原语 (MVP2)
libc = "0.2"
# 启动期环境探测
which = "6"
# 终端语义解析 (MVP3)
vt100 = "0.15"
# Prompt marker 匹配
regex = "1.10"

[dev-dependencies]
# 文件型 SQLite 测试（用于验证 WAL 模式，:memory: 不能可靠开启 WAL）
tempfile = "3"
