[package]
name = "ah"
version = "1.7.0"
edition = "2024"
authors = ["sevenx"]
description = "L2 Scheduling Daemon for Agent Hypervisor"
repository = "https://github.com/SevenX77/ccbd-rust"

[dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "sync", "signal", "time"] }
# 序列化与 JSON-RPC 基础
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# SQLite 持久化 (Linux 必须 bundled 保证无外部依赖)
# 强类型错误传播
thiserror = "1.0"
# 日志观测体系
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 路径规范解算
directories = "5.0"
# session_id 生成 (用于 D §3.2 session.create); v7 = 时间前缀有序 outbox event_id (R1-Q1/Q3)
uuid = { version = "1", features = ["v4", "v7"] }
# 系统级原语 (MVP2)
libc = "0.2"
# 启动期环境探测
which = "6"
# 终端语义解析 (MVP3)
vt100 = "0.15"
# Prompt marker 匹配
regex = "1.10"
# CLI skeleton (MVP6)
clap = { version = "4.5", features = ["derive"] }
tabled = "0.15"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.12", features = ["tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
rusqlite = "0.32"
ureq = { version = "2.12", default-features = false }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.12", features = ["tls"] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
] }

[dev-dependencies]
# 文件型 SQLite 测试（用于验证 WAL 模式，:memory: 不能可靠开启 WAL）
tempfile = "3"
serial_test = "3"

[[bin]]
name = "ahd"
path = "src/bin/ahd.rs"

[[bin]]
name = "ah"
path = "src/bin/ah.rs"

[workspace]

# Config for cargo-dist.
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI.
cargo-dist-version = "0.32.0"
# CI backends to support.
ci = "github"
# Generate the POSIX shell installer for the Linux ah/ahd release.
installers = ["shell"]
# cargo-dist archive binary override: publish only the public CLI/daemon
# binaries; src/bin/ahd_test_helper.rs remains a local test helper.
binaries = { "*" = ["ah", "ahd"] }
# Target platforms to build apps for.
targets = ["x86_64-unknown-linux-gnu"]
# Install into Cargo's bin directory by default.
install-path = "CARGO_HOME"
# Do not install a self-updater binary.
install-updater = false

[[workspace.metadata.dist.extra-artifacts]]
artifacts = [
  "scripts/windows/provision-ah-wsl.ps1",
  "scripts/windows/AhProvisioning.psm1",
  "scripts/windows/enable-ah-wsl-features.ps1",
]
build = [
  "bash",
  "-lc",
  "test -f scripts/windows/provision-ah-wsl.ps1 && test -f scripts/windows/AhProvisioning.psm1 && test -f scripts/windows/enable-ah-wsl-features.ps1",
]

# The profile that 'dist' will build release artifacts with.
[profile.dist]
inherits = "release"
lto = "thin"
